swen430as2/test_files/invalid/unions/UnionType_Invalid_1-TC01.while
int f(int|null x) {
    return x;
}
